--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <option>P2</option>
         </select></label>
         <label class="wide">Amount (₹)<input type="number" step="1" name="amount" placeholder="150"
-                                             required></label>
+                                             required min="1" max="40000"></label>
         <button type="submit" class="submit-wide">Submit</button>
     </form>
 {% endblock %}
